# blogwriter_CrewAi

./: app.py  pyproject.toml  requirements.txt
db/: chroma.sqlite3
src/: __init__.py  crew.py
src/config/: __init__.py  config.py  crew.py  settings.py
